# C_Test_using_Python

./: LICENSE  meson.build
.github/workflows/: main.yml
build_tools/: generate_cffi_code.py
export/: other_module.h  test.h
src/: meson.build  test.c  test2.c
test_cases/: meson.build  test_run.py
